--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "knex": "^0.95.11",
+    "router": "^1.3.6",
     "sqlite3": "^5.0.2"
   },
   "devDependencies": {
